tests/neg/i20283.scala

@annotation.experimental
def method(): Unit = ()

val _ = method() // error
