tests/neg/i20283.check
-- Error: tests/neg/i20283.scala:5:8 -----------------------------------------------------------------------------------
5 |val _ = method() // error
  |        ^^^^^^
  |        method method is marked @experimental
  |
  |        Experimental definition may only be used under experimental mode:
  |          1. in a definition marked as @experimental, or
  |          2. an experimental feature is imported at the package level, or
  |          3. compiling with the -experimental compiler flag.
